# tinyaya-stage2-scale

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MODEL_CARD.md  README.md  pyproject.toml
.claude/: PLAN.md  PROGRESS.md  VERIFY.md
.factory/: PLAN.md  PROGRESS.md  VERIFY.md  memories.md  settings.json
.factory/archive/: .gitkeep
.factory/commands/: curate.md  plan.md  progress.md  recall.md  remember.md  verify.md
.factory/droids/: memory-curator.md  plan-driver.md  tpu-diagnoser.md  tpu-watchdog.md  verifier.md
.factory/hooks/: _lib.py  post_tool_use.py  pre_compact.py  session_end.py  session_start.py  stop.py  user_prompt_submit.py
.factory/orchestration/: CONTROL_PLANE.md  README.md  SPEC.md  TPU_OPTIMIZATION_SPEC.md
.github/workflows/: ci.yml
configs/gpu/: stage2_26k_parallel.yaml
configs/tpu/: stage2_tpu_v6e_proxy.yaml  stage2_tpu_v6e_v2.yaml  stage2_tpu_v6e_v3.yaml  (+1 more)
docs/: hf-model-card-tr-hi-s2st-v0.1.md  next-v0.3-training-plan.md  sweep-coordinated-runbook.md  v0.3-implementation-plan.md  v0.3-public-release-plan.md
phase-3-data-generation-pipeline/: AGENTS.md  cli.py
scripts/: promote_sweep_winner.py  train_hierarchical.py
simultaneous-translation/: AGENTS.md  pyproject.toml
simultaneous-translation/configs/: stage2_26k_parallel.yaml  stage2_tpu.yaml  stage2_tpu_canary.yaml  stage2_tpu_canary_v4_spot.yaml  stage2_tpu_canary_v5e_spot.yaml  stage2_tpu_v4_spot.yaml  stage2_tpu_v6e_spot.yaml  stage2_tpu_v6e_spot_hbm_smoke.yaml  stage2_tpu_v6e_spot_opt5_profile.yaml  stage2_tpu_v6e_spot_opt6_bucket200_300_400.yaml  stage2_tpu_v6e_spot_opt6_bucket200_400.yaml  stage2_tpu_v6e_spot_opt6_bucket256_400.yaml  stage2_tpu_v6e_spot_opt6_bucket256_400_1k.yaml  stage2_tpu_v6e_spot_opt6_bucket256_400_prod5k.yaml  stage2_tpu_v6e_spot_opt_b16g2.yaml  stage2_tpu_v6e_spot_opt_depth32.yaml  stage2_tpu_v6e_spot_opt_depth64.yaml  stage2_tpu_v6e_spot_opt_depth64_1k.yaml  stage2_tpu_v6e_spot_opt_depth64_prod5k.yaml  stage2_tpu_v6e_spot_opt_log10.yaml  stage2_tpu_v6e_spot_opt_log10_1k.yaml  stage2_tpu_v6e_spot_opt_log10_hot1k.yaml  stage2_tpu_v6e_spot_opt_log10_hot300.yaml  stage2_tpu_v6e_spot_opt_log25.yaml  stage2_tpu_v6e_spot_opt_nockpt.yaml  stage2_tpu_v6e_spot_opt_prod5k.yaml  stage2_tpu_v6e_spot_opt_warmup.yaml  stage2_tpu_v6e_v2.yaml  stage2_tpu_v6e_valfix_smoke.yaml
simultaneous-translation/docs/: MEMORY-EXTENSIONS.md  MEMORY-INSTALLATION.md  MEMORY-MAINTENANCE.md  MEMORY-SYSTEM.md  MEMORY-USAGE.md  next-15k-run-plan.md  onboarding.md  tpu-capacity-log.md  tpu-changes.md  tpu-launch-plan.md  tpu-trc-allocation.md
simultaneous-translation/scripts/: eval_checkpoint.py  eval_full_codebooks.py  eval_release.py  eval_stage2.py  eval_translation.py  eval_with_english.py  generate_demos.py  infer_only.py  make_splits.py  prepare_data.py  prepare_translation_data.py  prepare_translation_data_fixed.py  publish_release.py  test_tpu_training_step.py  train_and_infer.py  train_hierarchical.py  train_stage1.py  train_stage2.py  translate_wav.py  upload_encoded_dataset.py  validate_checkpoint.py  validate_full_pipeline.sh
simultaneous-translation/scripts/tpu/: README.md  _lib.sh  _remote_redeploy.sh  hot_redeploy.sh  launch_canary.sh  launch_qr.sh  launch_release.sh  launch_spot.sh  ops.sh  probe_strategies.py  setup_gcp.sh  startup_script.sh
simultaneous-translation/src/backend/: __init__.py  base.py  gpu_backend.py  tpu_backend.py
simultaneous-translation/src/data/: bucket_sampler.py  collator.py  dataset.py  interleaver.py  mimi_encoder.py
simultaneous-translation/src/model/: backbone.py  composite.py  depth_decoder.py  lora_setup.py  scan_utils.py  surgery.py
simultaneous-translation/src/training/: checkpointing.py  scheduler.py  trainer.py  translation_loss.py
simultaneous-translation/sweeps/: README.md  sweep_stage2.yaml
sweeps/: README.md  sweep_stage2.yaml  sweep_stage2_scale_bayes.yaml  sweep_stage2_scale_grid.yaml
tests/: test_checkpoint_retention.py  test_codebook_schedule.py  test_multitask.py  test_spec_augment.py  test_sweep_coordinator.py  test_sweep_promote.py
(+48 files in other folders)
