[project]
name = "tinyaya-stage2"
version = "0.1.0"
description = "TR-HI speech-to-speech translation Stage 2 training (TPU)"
readme = "../README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Mayank Bhaskar", email = "mayankbhaskar007@gmail.com" },
]
license = { text = "Apache-2.0" }

dependencies = [
    "torch==2.9.0",
    "torch-xla[tpu]==2.9.0",
    "transformers>=4.45,<4.50",
    "peft>=0.13,<0.16",
    "accelerate>=1.0,<2.0",
    "soundfile==0.12.1",
    "scipy==1.14.1",
    "librosa==0.10.2",
    "wandb>=0.18,<0.20",
    "gcsfs>=2024.10.0",
    "huggingface-hub[cli]>=0.26",
    "pyyaml>=6.0",
    "sacrebleu==2.4.3",
    "tqdm>=4.66",
    "numpy<2.0",
]

[project.optional-dependencies]
eval = [
    "speechmos>=0.0.1",
    "datasets>=3.0",
    "torchaudio==2.9.0",
]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# uv-specific configuration
# torch_xla[tpu] pulls libtpu from Google's index.
# torch is taken from PyTorch's CPU-only index (TPU host CPUs do not need CUDA).
[tool.uv]
find-links = ["https://storage.googleapis.com/libtpu-releases/index.html"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
